--- a/Pages/css/SignUp.css
+++ b/Pages/css/SignUp.css
@@ -1,40 +1,18 @@
-* {
-    margin: 0;
-    padding: 0;
-}
-
 .Container {
-    background-image: url("../../src/img/BBQ.jpg");
+    background-image: url("../img/BBQ.jpg");
     background-size: cover;
     min-height: 100vh;
     background-attachment: fixed;
 }
 
-.header {
-    height: 100px;
-    min-width: 100vh;
-}
-
-.Rgba {
+.BgOpacity {
     min-height: 100vh;
     background: rgba(255,255,255,0.8);
 }
 
-.Title {
-    padding-top: 10px;
-    padding-left: 10px;
-    font-size: 25px;
-    font-weight: bold;
-    color: #544747;
-    float: left;
-}
-
-.Menu {
-    padding-top: 10px;
-    padding-right: 10px;
-    float: right;
-    height: 30px;
-    width: 120px;
+.Space {
+    height: 100px;
+    min-width: 100%
 }
 
 .SignupForm {
@@ -56,48 +34,6 @@
     font-weight: bold;
 }
 
-.form-liner {
-    height: 60px;
-    width: 100%;
-}
-
-.form-liner ul {
-  list-style-type: none;
-  text-align: center;
-}
-
-.form-liner ul li{
-  list-style-type: none;
-  text-align: right;
-  display: inline-block;
-}
-
-.form-left {
-    width: 45%;
-    min-width: 80px;
-    max-width: 175px;
-    float: left;
-}
-
-.form-left li {
-    font-size: 20px;
-    font-weight: normal;
-}
-
-.form-right {
-    width:55%;
-    max-width: 200px;
-    padding-left: 15px;
-    float: left;
-}
-
-.form-right small {
-    color: red;
-    font-weight: bold;
-    float: left;
-    padding-left: 30px;
-}
-
 .signupbtn {
     display: table;
     position: relative;
@@ -110,7 +46,20 @@
     cursor: pointer;
 }
 
-.signupbtn ::after {
+.SignUpBtn {
+    display: table;
+    position: relative;
+    width: 100px;
+    height: 40px;
+    font-weight: bold;
+    margin:0 auto;
+    border-width: 2px;
+    border-radius: 8px;
+    box-shadow: 0 2px 5px #ccc;
+    cursor: pointer;
+}
+
+.SignUpBtn ::after {
     position: absolute;
     bottom: 0px;
     left: 0;
@@ -123,15 +72,28 @@
     transition: transform .3s;
 }
 
-.signupbtn :hover::after {
+.SignUpBtn :hover::after {
     transform: scale(1, 1);
 }
 
-.signupbtn :active {
+.SignUpBtn:active {
     background-color: #dcdcdc;
 }
 
-.btncentering {
+.CantSignUp {
+    display: table;
+    position: relative;
+    width: 100px;
+    height: 40px;
+    font-weight: bold;
+    margin:0 auto;
+    border-width: 2px;
+    border-radius: 8px;
+    box-shadow: 0 2px 5px #ccc;
+    background-color: darkgrey;
+}
+
+.BtnCentering {
     display: table-cell;
     vertical-align: middle;
 }
